--- a/cjt.html
+++ b/cjt.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hi">
 <head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chandan Ji Team - Worker Management App</title>
+    <title>चंदन जी टीम - श्रमिक प्रबंधन ऐप</title>
     <style>
         * {
             margin: 0;
@@ -404,50 +404,50 @@
     <header>
         <div class="header-content">
             <div class="logo">
-    <img src="https://i.ibb.co/xtVs3bCr/1000094200.png" alt="Chandan Ji Team Logo">
+    <img src="https://i.ibb.co/4wwzXykd/1000094206-removebg-preview.png" alt="चंदन जी टीम लोगो">
 </div>
-            <div class="app-title">Chandan Ji Team</div>
+            <div class="app-title">चंदन जी टीम</div>
         </div>
     </header>
 
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1>Chandan Ji Team</h1>
-            <p>Complete Worker Management Solution</p>
-            <button class="btn-primary" onclick="scrollToDownload()">Download App</button>
+            <h1>चंदन जी टीम</h1>
+            <p>संपूर्ण श्रमिक प्रबंधन समाधान</p>
+            <button class="btn-primary" onclick="scrollToDownload()">ऐप डाउनलोड करें</button>
         </div>
     </section>
 
     <!-- Features Section -->
     <section class="features">
         <div class="container">
-            <h2 class="section-title">Powerful Features</h2>
+            <h2 class="section-title">शक्तिशाली विशेषताएं</h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">👥</div>
-                    <h3>Worker Management</h3>
-                    <p>Efficiently manage your entire workforce with detailed profiles, contact information, and work history tracking.</p>
+                    <h3>श्रमिक प्रबंधन</h3>
+                    <p>विस्तृत प्रोफाइल, संपर्क जानकारी और कार्य इतिहास ट्रैकिंग के साथ अपनी पूरी श्रमिक टीम को कुशलतापूर्वक प्रबंधित करें।</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">📋</div>
-                    <h3>Attendance & Dehari</h3>
-                    <p>Track daily attendance and dehari (daily wages) with ease. Generate accurate records for payroll processing.</p>
+                    <h3>उपस्थिति और देहरी</h3>
+                    <p>दैनिक उपस्थिति और देहरी (दैनिक मजदूरी) को आसानी से ट्रैक करें। वेतन प्रसंस्करण के लिए सटीक रिकॉर्ड तैयार करें।</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">💰</div>
-                    <h3>Payments & Reports</h3>
-                    <p>Manage payments seamlessly and generate comprehensive reports for better business insights and accounting.</p>
+                    <h3>भुगतान और रिपोर्ट</h3>
+                    <p>भुगतान को सहजता से प्रबंधित करें और बेहतर व्यावसायिक अंतर्दृष्टि और लेखांकन के लिए व्यापक रिपोर्ट तैयार करें।</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">🔒</div>
-                    <h3>Secure Data</h3>
-                    <p>Your data is encrypted and stored securely. Lock protection ensures only authorized access to sensitive information.</p>
+                    <h3>सुरक्षित डेटा</h3>
+                    <p>आपका डेटा एन्क्रिप्टेड है और सुरक्षित रूप से संग्रहीत है। लॉक सुरक्षा सुनिश्चित करती है कि केवल अधिकृत व्यक्ति ही संवेदनशील जानकारी तक पहुंच सकें।</p>
                 </div>
                 <div class="feature-card">
     <div class="feature-icon">👷</div>
-    <h3>Team Use App</h3>
-    <p>This app is developed by Abhishek for managing his own team and daily work.</p>
+    <h3>टीम उपयोग ऐप</h3>
+    <p>यह ऐप अभिषेक द्वारा अपनी टीम और दैनिक कार्य के प्रबंधन के लिए विकसित किया गया है।</p>
 </div>
             </div>
         </div>
@@ -456,11 +456,11 @@
     <!-- App Preview Section -->
 <section class="app-preview">
     <div class="container">
-        <h2 class="section-title">App Screenshots</h2>
+        <h2 class="section-title">ऐप स्क्रीनशॉट</h2>
 
         <div class="preview-grid">
             <div class="screenshot">
-                <img src="https://i.ibb.co/Gf5KzDR4/Screenshot-20260202-081840-807.png" alt="App Screenshot 1">
+                <img src="https://i.ibb.co/Gf5KzDR4/Screenshot-20260202-081840-807.png" alt="ऐप स्क्रीनशॉट 1">
             </div>
 
             <div class="screenshot">
@@ -480,15 +480,15 @@
     <!-- About Section -->
     <section class="about">
         <div class="container">
-            <h2 class="section-title">About the App</h2>
+            <h2 class="section-title">ऐप के बारे में</h2>
             <div class="about-content">
                 <p>
-                    Chandan Ji Team is a comprehensive worker management application designed specifically for businesses 
-                    that need to track workers, attendance, daily wages (dehari), and payments. Built with simplicity and 
-                    efficiency in mind, this app helps you streamline your workforce management operations, maintain 
-                    accurate records, and generate detailed reports. Whether you're managing a construction site, 
-                    manufacturing unit, or any business with daily wage workers, CJT provides all the tools you need 
-                    in one secure platform.
+                    चंदन जी टीम एक व्यापक श्रमिक प्रबंधन एप्लिकेशन है जो विशेष रूप से उन व्यवसायों के लिए डिज़ाइन किया गया है 
+                    जिन्हें श्रमिकों, उपस्थिति, दैनिक मजदूरी (देहरी), और भुगतान को ट्रैक करने की आवश्यकता होती है। सरलता और 
+                    दक्षता को ध्यान में रखते हुए बनाया गया, यह ऐप आपको अपने कार्यबल प्रबंधन संचालन को सुव्यवस्थित करने, 
+                    सटीक रिकॉर्ड बनाए रखने और विस्तृत रिपोर्ट तैयार करने में मदद करता है। चाहे आप निर्माण स्थल, 
+                    विनिर्माण इकाई, या दैनिक वेतन श्रमिकों वाले किसी भी व्यवसाय का प्रबंधन कर रहे हों, सीजेटी एक सुरक्षित 
+                    प्लेटफ़ॉर्म में आपकी आवश्यक सभी उपकरण प्रदान करता है।
                 </p>
             </div>
         </div>
@@ -498,12 +498,12 @@
     <section class="disclaimer">
         <div class="container">
             <div class="disclaimer-content">
-                <h2>⚠️ Important Disclaimer</h2>
+                <h2>⚠️ महत्वपूर्ण अस्वीकरण</h2>
                 <ul>
-                    <li>This app is intended for business and private use only</li>
-                    <li>Not affiliated with any government organization or department</li>
-                    <li>Users are responsible for compliance with local labor laws</li>
-                    <li>Data accuracy is the responsibility of the user</li>
+                    <li>यह ऐप केवल व्यावसायिक और निजी उपयोग के लिए है</li>
+                    <li>किसी भी सरकारी संगठन या विभाग से संबद्ध नहीं है</li>
+                    <li>उपयोगकर्ता स्थानीय श्रम कानूनों के अनुपालन के लिए जिम्मेदार हैं</li>
+                    <li>डेटा की सटीकता उपयोगकर्ता की जिम्मेदारी है</li>
                 </ul>
             </div>
         </div>
@@ -513,13 +513,13 @@
     <section class="privacy">
         <div class="container">
             <div class="privacy-content">
-                <h2>🔒 Privacy Policy</h2>
+                <h2>🔒 गोपनीयता नीति</h2>
                 <ul>
-                    <li>Your data is stored locally on your device and is not shared with third parties</li>
-                    <li>No personal information is collected or transmitted to external servers</li>
-                    <li>App lock feature ensures your data remains private and secure</li>
-                            <li>The app does not generate, display, or modify any misleading or unauthorized messages.</li>
-                    <li>We do not track, sell, or monetize your information in any way</li>
+                    <li>आपका डेटा आपके डिवाइस पर स्थानीय रूप से संग्रहीत है और तृतीय पक्षों के साथ साझा नहीं किया जाता है</li>
+                    <li>कोई व्यक्तिगत जानकारी एकत्र या बाहरी सर्वर पर प्रेषित नहीं की जाती है</li>
+                    <li>ऐप लॉक सुविधा सुनिश्चित करती है कि आपका डेटा निजी और सुरक्षित रहे</li>
+                    <li>ऐप कोई भ्रामक या अनधिकृत संदेश उत्पन्न, प्रदर्शित या संशोधित नहीं करता है।</li>
+                    <li>हम आपकी जानकारी को किसी भी तरह से ट्रैक, बेचते या मुद्रीकृत नहीं करते हैं</li>
                 </ul>
             </div>
         </div>
@@ -528,21 +528,21 @@
     <!-- Download Section -->
     <section class="download" id="download-section">
         <div class="container">
-            <h2>Ready to Get Started?</h2>
-            <p style="font-size: 1.2rem; margin-bottom: 30px;">Download Chandan Ji Team now and simplify your worker management</p>
-            <button class="btn-download" onclick="handleDownload()">📥 Download APK</button>
+            <h2>शुरू करने के लिए तैयार हैं?</h2>
+            <p style="font-size: 1.2rem; margin-bottom: 30px;">चंदन जी टीम अभी डाउनलोड करें और अपने श्रमिक प्रबंधन को सरल बनाएं</p>
+            <button class="btn-download" onclick="handleDownload()">📥 APK डाउनलोड करें</button>
         </div>
         <div id="qrBox" style="margin-top:25px; display:flex; justify-content:center;"></div>
-<p style="margin-top:10px; opacity:0.9;">Scan to Download App</p>
+<p style="margin-top:10px; opacity:0.9;">ऐप डाउनलोड करने के लिए स्कैन करें</p>
 <button class="btn-download" style="margin-top:15px;" onclick="openWebMode()">
-🌐 Open Web Version
+🌐 वेब संस्करण खोलें
 </button>
     </section>
 
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Chandan Ji Team. All rights reserved.</p>
+            <p>&copy; 2024 चंदन जी टीम। सर्वाधिकार सुरक्षित।</p>
         </div>
     </footer>
 
@@ -556,7 +556,7 @@
 
         // Handle download button click
         function handleDownload() {
-            alert('APK coming soon');
+            alert('APK जल्द आ रहा है');
         }
 
         // Add scroll animations
